Add functionality for 0-10V control of fan and valve.

--- a/.env_template
+++ b/.env_template
@@ -421,7 +421,17 @@ SSR_DUTY_CYCLE={{  states('input_number.ssr_duty_cycle') | round(0) }}
 SSR_BASE_PERIOD={{  states('input_number.ssr_base_period') | round(0) }}
 SSR_STOP_LOOP={{  states('input_boolean.solid_state_relay_stop_loop') }}
 
+# FAN VOLTAGE
+MQTT_FAN_VOLTAGE_CMD_REQ="cmd/fan_voltage/req"
+MQTT_FAN_VOLTAGE_STATE={{  states('input_number.new_intake_fan_voltage') | round(0) }}
+MQTT_FAN_VOLTAGE_CMD_RES="cmd/fan_voltage/res"
+MQTT_FAN_VOLTAGE_CMD_REQ_AUTOMATION_ALIAS="Fan voltage, Update"
 
+#VALVE VOLTAGE
+MQTT_VALVE_VOLTAGE_CMD_REQ="cmd/valve_voltage/req"
+MQTT_VALVE_VOLTAGE_STATE={{  states('input_number.valve_voltage') | round(0) }}
+MQTT_VALVE_VOLTAGE_CMD_RES="cmd/valve_voltage/res"
+MQTT_VALVE_VOLTAGE_CMD_REQ_AUTOMATION_ALIAS="Valve voltage, Update"
 
 
 # Grow lamp1: Heliospectra Elixia 
