--- a/server/src/config_generator/homeassistant_templates/input_number_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_number_template.yaml
@@ -167,6 +167,14 @@
     step: 0.1
     mode: "box"
 
+  valve_voltage:
+    name: "Valve manual voltage"
+    initial: 0
+    min: 0
+    max: 10
+    step: 0.1
+    mode: "box"
+
   
 
   
