--- a/.env_template
+++ b/.env_template
@@ -218,37 +218,37 @@ LEAF_WETNESS_10_HA_ICON="mdi:water-percent"
 
 # Litt usikker på device identifier her
 # CO2_VOC sensor #
-MQTT_SENSOR_11_DT_REQ="dt/gf/CO2VOC/req"
-MQTT_SENSOR_11_DT_RES="dt/gf/CO2VOC/res"
-SENSOR_11_DT_REQ_AUTOMATION_ALIAS="CO2VOC Request"
+MQTT_SENSOR_11_DT_REQ="dt/gf/CO2VOC/1/req"
+MQTT_SENSOR_11_DT_RES="dt/gf/CO2VOC/1/res"
+SENSOR_11_DT_REQ_AUTOMATION_ALIAS="CO2VOC_1 Request"
 SENSOR_11_DT_REQ_INTERVAL_SEC=49
 # CO2_VOC: Temperature 11
-TEMPERATURE_11_NAME="CO2_VOC Temperature"
-TEMPERATURE_11_HA_ID="CO2_VOC_TEMP"
+TEMPERATURE_11_NAME="CO2_VOC_1 Temperature"
+TEMPERATURE_11_HA_ID="CO2_VOC_1_TEMP"
 TEMPERATURE_11_VALUE_TEMPLATE="{{ value_json['fields'].temperature }}"
 TEMPERATURE_11_HA_UNIT="°C"
 TEMPERATURE_11_HA_ICON="mdi:thermometer"
 # CO2_VOC: Humidity 11
-HUMIDITY_11_NAME="CO2_VOC Humidity"
-HUMIDITY_11_HA_ID="CO2_VOC_RH"
+HUMIDITY_11_NAME="CO2_VOC_1 Humidity"
+HUMIDITY_11_HA_ID="CO2_VOC_1_RH"
 HUMIDITY_11_VALUE_TEMPLATE="{{ value_json['fields'].humidity }}"
 HUMIDITY_11_HA_UNIT="%[RH]"
 HUMIDITY_11_HA_ICON="mdi:water-percent"
 # CO2_VOC: CO2 11
-CO2_11_NAME="CO2_VOC CO2"
-CO2_11_HA_ID="CO2_VOC_CO2"
+CO2_11_NAME="CO2_VOC_1 CO2"
+CO2_11_HA_ID="CO2_VOC_1_CO2"
 CO2_11_VALUE_TEMPLATE="{{ value_json['fields'].co2 }}"
 CO2_11_HA_UNIT="ppm"
 CO2_11_HA_ICON="mdi:smoke"
 # CO2_VOC: Dewpoint 11
-DEWPOINT_11_NAME="CO2_VOC Dewpoint"
-DEWPOINT_11_HA_ID="CO2_VOC_DP"
+DEWPOINT_11_NAME="CO2_VOC_1 Dewpoint"
+DEWPOINT_11_HA_ID="CO2_VOC_1_DP"
 DEWPOINT_11_VALUE_TEMPLATE="{{ value_json['fields'].dewpoint }}"
 DEWPOINT_11_HA_UNIT="°C"
 DEWPOINT_11_HA_ICON="mdi:thermometer-water"
 # CO2_VOC: Volume Flow 11
-VOLUMEFLOW_11_NAME="CO2_VOC Volume Flow"
-VOLUMEFLOW_11_HA_ID="CO2_VOC_VF"
+VOLUMEFLOW_11_NAME="CO2_VOC_1 Volume Flow"
+VOLUMEFLOW_11_HA_ID="CO2_VOC_1_VF"
 VOLUMEFLOW_11_VALUE_TEMPLATE="{{ value_json['fields'].volumeFlow }}"
 VOLUMEFLOW_11_HA_UNIT="m3/s"
 VOLUMEFLOW_11_HA_ICON="mdi:air-filter"
@@ -258,68 +258,91 @@ VOLUMEFLOW_11_HA_ICON="mdi:air-filter"
 
 # Litt usikker på device identifier her
 # CO2_VOC_1 sensor #
-MQTT_SENSOR_12_DT_REQ="dt/gf/CO2VOC1/req"
-MQTT_SENSOR_12_DT_RES="dt/gf/CO2VOC1/res"
-SENSOR_12_DT_REQ_AUTOMATION_ALIAS="CO2VOC1 Request"
+MQTT_SENSOR_12_DT_REQ="dt/gf/CO2VOC/2/req"
+MQTT_SENSOR_12_DT_RES="dt/gf/CO2VOC/2/res"
+SENSOR_12_DT_REQ_AUTOMATION_ALIAS="CO2VOC_2 Request"
 SENSOR_12_DT_REQ_INTERVAL_SEC=49
 # CO2_VOC_1: Temperature 12
-TEMPERATURE_12_NAME="CO2_VOC1 Temperature"
-TEMPERATURE_12_HA_ID="CO2_VOC1_TEMP"
+TEMPERATURE_12_NAME="CO2_VOC_2 Temperature"
+TEMPERATURE_12_HA_ID="CO2_VOC_2_TEMP"
 TEMPERATURE_12_VALUE_TEMPLATE="{{ value_json['fields'].temperature }}"
 TEMPERATURE_12_HA_UNIT="°C"
 TEMPERATURE_12_HA_ICON="mdi:thermometer"
 # CO2_VOC_1: Humidity 12
-HUMIDITY_12_NAME="CO2_VOC1 Humidity"
-HUMIDITY_12_HA_ID="CO2_VOC1_RH"
+HUMIDITY_12_NAME="CO2_VOC_2 Humidity"
+HUMIDITY_12_HA_ID="CO2_VOC_2_RH"
 HUMIDITY_12_VALUE_TEMPLATE="{{ value_json['fields'].humidity }}"
 HUMIDITY_12_HA_UNIT="%[RH]"
 HUMIDITY_12_HA_ICON="mdi:water-percent"
 # CO2_VOC_1: CO2 12
-CO2_12_NAME="CO2_VOC1 CO2"
-CO2_12_HA_ID="CO2_VOC1_CO2"
+CO2_12_NAME="CO2_VOC_2 CO2"
+CO2_12_HA_ID="CO2_VOC_2_CO2"
 CO2_12_VALUE_TEMPLATE="{{ value_json['fields'].co2 }}"
 CO2_12_HA_UNIT="ppm"
 CO2_12_HA_ICON="mdi:smoke"
 # CO2_VOC_1: Dewpoint 12
-DEWPOINT_12_NAME="CO2_VOC1 Dewpoint"
-DEWPOINT_12_HA_ID="CO2_VOC1_DP"
+DEWPOINT_12_NAME="CO2_VOC_2 Dewpoint"
+DEWPOINT_12_HA_ID="CO2_VOC_2_DP"
 DEWPOINT_12_VALUE_TEMPLATE="{{ value_json['fields'].dewpoint }}"
 DEWPOINT_12_HA_UNIT="°C"
 DEWPOINT_12_HA_ICON="mdi:thermometer-water"
 # CO2_VOC_1: Volume Flow 12
-VOLUMEFLOW_12_NAME="CO2_VOC1 Volume Flow"
-VOLUMEFLOW_12_HA_ID="CO2_VOC1_VF"
+VOLUMEFLOW_12_NAME="CO2_VOC_2 Volume Flow"
+VOLUMEFLOW_12_HA_ID="CO2_VOC_2_VF"
 VOLUMEFLOW_12_VALUE_TEMPLATE="{{ value_json['fields'].volumeFlow }}"
 VOLUMEFLOW_12_HA_UNIT="m3/s"
 VOLUMEFLOW_12_HA_ICON="mdi:air-filter"
 
-
-# ---------- LEGGER TIL NY TEMP SENSOR --------------
-
-# Litt usikker på device identifier her
-# STH01 sensor #
-MQTT_SENSOR_13_DT_REQ="dt/gf/STH01/req"
-MQTT_SENSOR_13_DT_RES="dt/gf/STH01/res"
-SENSOR_13_DT_REQ_AUTOMATION_ALIAS="STH01 Request"
+# STH01_1 sensor #
+MQTT_SENSOR_13_DT_REQ="dt/gf/STH01/1/req"
+MQTT_SENSOR_13_DT_RES="dt/gf/STH01/1/res"
+SENSOR_13_DT_REQ_AUTOMATION_ALIAS="STH01_1 Request"
 SENSOR_13_DT_REQ_INTERVAL_SEC=49
 # STH01: Temperature 13
-TEMPERATURE_13_NAME="STH01 Temperature"
-TEMPERATURE_13_HA_ID="STH01_TEMP"
+TEMPERATURE_13_NAME="STH01_1 Temperature"
+TEMPERATURE_13_HA_ID="STH01_1_TEMP"
 TEMPERATURE_13_VALUE_TEMPLATE="{{ value_json['fields'].temperature }}"
 TEMPERATURE_13_HA_UNIT="°C"
 TEMPERATURE_13_HA_ICON="mdi:thermometer"
 # STH01: Humidity 13
-HUMIDITY_13_NAME="STH01 Humidity"
-HUMIDITY_13_HA_ID="STH01_RH"
+HUMIDITY_13_NAME="STH01_1 Humidity"
+HUMIDITY_13_HA_ID="STH01_1_RH"
 HUMIDITY_13_VALUE_TEMPLATE="{{ value_json['fields'].humidity }}"
 HUMIDITY_13_HA_UNIT="%[RH]"
 HUMIDITY_13_HA_ICON="mdi:water-percent"
 # STH01: Dewpoint 13
-DEWPOINT_13_NAME="STH01 Dewpoint"
-DEWPOINT_13_HA_ID="STH01_DP"
+DEWPOINT_13_NAME="STH01_1 Dewpoint"
+DEWPOINT_13_HA_ID="STH01_1_DP"
 DEWPOINT_13_VALUE_TEMPLATE="{{ value_json['fields'].dewpoint }}"
 DEWPOINT_13_HA_UNIT="°C"
 DEWPOINT_13_HA_ICON="mdi:thermometer-water"
+
+
+
+# STH01_2 sensor #
+MQTT_SENSOR_14_DT_REQ="dt/gf/STH01/2/req"
+MQTT_SENSOR_14_DT_RES="dt/gf/STH01/2/res"
+SENSOR_14_DT_REQ_AUTOMATION_ALIAS="STH01_2 Request"
+SENSOR_14_DT_REQ_INTERVAL_SEC=49
+# STH01_2: Temperature 14
+TEMPERATURE_14_NAME="STH01_2 Temperature"
+TEMPERATURE_14_HA_ID="STH01_2_TEMP"
+TEMPERATURE_14_VALUE_TEMPLATE="{{ value_json['fields'].temperature }}"
+TEMPERATURE_14_HA_UNIT="°C"
+TEMPERATURE_14_HA_ICON="mdi:thermometer"
+# STH01_2: Humidity 14
+HUMIDITY_14_NAME="STH01_2 Humidity"
+HUMIDITY_14_HA_ID="STH01_2_RH"
+HUMIDITY_14_VALUE_TEMPLATE="{{ value_json['fields'].humidity }}"
+HUMIDITY_14_HA_UNIT="%[RH]"
+HUMIDITY_14_HA_ICON="mdi:water-percent"
+# STH01_2: Dewpoint 14
+DEWPOINT_14_NAME="STH01_2 Dewpoint"
+DEWPOINT_14_HA_ID="STH01_2_DP"
+DEWPOINT_14_VALUE_TEMPLATE="{{ value_json['fields'].dewpoint }}"
+DEWPOINT_14_HA_UNIT="°C"
+DEWPOINT_14_HA_ICON="mdi:thermometer-water"
+
 
 # Actuators #
 # Relay 01 - 16
