--- a/server/src/config_generator/homeassistant_templates/automations_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/automations_template.yaml
@@ -621,6 +621,23 @@
         "data": "ha_req" }'
   mode: single
 
+#- alias: {{SENSOR_12_DT_REQ_AUTOMATION_ALIAS}} 
+#  description: ''
+#  trigger:
+#  - platform: time_pattern
+#    seconds: /{{SENSOR_12_DT_REQ_INTERVAL_SEC}}
+#  condition: []
+#  action:
+#  - service: mqtt.publish
+#    metadata: {}
+#    data:
+#     qos: 0
+#      retain: false
+#      topic: {{MQTT_SENSOR_12_DT_REQ}}
+#      payload: '{"req_topic": {{MQTT_SENSOR_12_DT_REQ}}, "res_topic": {{MQTT_SENSOR_12_DT_RES}},
+#        "data": "ha_req" }'
+#  mode: single
+
 - alias: {{SENSOR_13_DT_REQ_AUTOMATION_ALIAS}} 
   description: ''
   trigger:
@@ -635,6 +652,23 @@
       retain: false
       topic: {{MQTT_SENSOR_13_DT_REQ}}
       payload: '{"req_topic": {{MQTT_SENSOR_13_DT_REQ}}, "res_topic": {{MQTT_SENSOR_13_DT_RES}},
+        "data": "ha_req" }'
+  mode: single
+
+- alias: {{SENSOR_14_DT_REQ_AUTOMATION_ALIAS}} 
+  description: ''
+  trigger:
+  - platform: time_pattern
+    seconds: /{{SENSOR_14_DT_REQ_INTERVAL_SEC}}
+  condition: []
+  action:
+  - service: mqtt.publish
+    metadata: {}
+    data:
+      qos: 0
+      retain: false
+      topic: {{MQTT_SENSOR_14_DT_REQ}}
+      payload: '{"req_topic": {{MQTT_SENSOR_14_DT_REQ}}, "res_topic": {{MQTT_SENSOR_14_DT_RES}},
         "data": "ha_req" }'
   mode: single
 
