--- a/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
@@ -110,6 +110,10 @@
     name: "PID enable"
     icon: "mdi:toggle-swich"
 
+  heating_pid_enable_toggle:
+    name: "Heating PID enable"
+    icon: "mdi:toggle-switch"
+
 
 
 
