--- a/server/src/config_generator/homeassistant_templates/automations_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/automations_template.yaml
@@ -1717,18 +1717,50 @@
       from: "off"
       to: "on"
   action:
-    - service: input_number.set_value
-      target: 
-        entity_id: "input_number.new_intake_fan_voltage"
-      data: 
-        value: 8
-    - service: input_boolean.turn_on
-      target:
-        entity_id: 
-          - input_boolean.co2_pid_enable_toggle
-          - input_boolean.heating_pid_enable_toggle
-          - input_boolean.cooling_pid_enable_toggle
-    - service: logbook.log
-      data:
-        name: "Grow Climate"
-        message: "All PIDs and Fan Voltage set. HVAC operation started."
+    # Turn on or off intake fan and PIDs based on state
+    - choose:
+        - conditions:
+            - condition: state
+              entity_id: "input_boolean.hvac_operation"
+              state: "on"
+          sequence:
+            - service: input_number.set_value
+              target: 
+                entity_id: "input_number.new_intake_fan_voltage"
+              data: 
+                value: 8
+
+            - service: input_boolean.turn_on
+              target:
+                entity_id: 
+                  - input_boolean.co2_pid_enable_toggle
+                  - input_boolean.heating_pid_enable_toggle
+                  - input_boolean.cooling_pid_enable_toggle
+
+            - service: logbook.log
+              data:
+                name: "Grow Climate"
+                message: "All PIDs and Fan Voltage set. HVAC operation started."
+
+        - conditions:
+            - condition: state
+              entity_id: "input_boolean.hvac_operation"
+              state: "off"
+          sequence:
+            - service: input_number.set_value
+              target: 
+                entity_id: "input_number.new_intake_fan_voltage"
+              data: 
+                value: 0  # Set it back to 0 when HVAC is off
+
+            - service: input_boolean.turn_off
+              target:
+                entity_id: 
+                  - input_boolean.co2_pid_enable_toggle
+                  - input_boolean.heating_pid_enable_toggle
+                  - input_boolean.cooling_pid_enable_toggle
+
+            - service: logbook.log
+              data:
+                name: "Grow Climate"
+                message: "All PIDs and Fan Voltage turned off. HVAC operation stopped."
