Added fan normal operation automation, and workings for the hvac enable button. Now able to shut them off too

--- a/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_boolean_template.yaml
@@ -135,6 +135,10 @@
     name: "New intake fan controller"
     icon: "mdi:fan"
 
+  fan_normal_operation_toggle:
+    name: "Enable normal fan operation"
+    icon: "mdi:fan"
+
   lamp_control_toggle:
     name: "Lamp controller"
     icon: "mdi:ceiling-light"
