--- a/server/src/config_generator/homeassistant_templates/automations_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/automations_template.yaml
@@ -1472,6 +1472,58 @@
       
   mode: single
 
+# Fan voltage
+- alias: "Enable normal fan operation"
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+      - input_number.fan_normal_operation_toggle
+    from: "off"
+    to: "on"
+  condition: []
+  action:
+  - service: mqtt.publish
+    metadata: {}
+    data_template:
+      qos: 0
+      retain: true
+      topic: {{MQTT_FAN_VOLTAGE_CMD_REQ}}
+      payload: >
+        {
+          "cmd": "adjust",
+          "res_topic": {{MQTT_FAN_VOLTAGE_CMD_RES}},
+          "value": "8"
+        }
+      
+  mode: single
+
+  # Fan voltage
+- alias: "Disable normal fan operation"
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+      - input_number.fan_normal_operation_toggle
+    from: "on"
+    to: "off"
+  condition: []
+  action:
+  - service: mqtt.publish
+    metadata: {}
+    data_template:
+      qos: 0
+      retain: true
+      topic: {{MQTT_FAN_VOLTAGE_CMD_REQ}}
+      payload: >
+        {
+          "cmd": "adjust",
+          "res_topic": {{MQTT_FAN_VOLTAGE_CMD_RES}},
+          "value": "0"
+        }
+      
+  mode: single
+
   # Valve voltage
 - alias: {{MQTT_VALVE_VOLTAGE_CMD_REQ_AUTOMATION_ALIAS}}
   description: ''
@@ -1709,7 +1761,7 @@
   mode: single
 
 - alias : "Enable grow climate"
-  id: "grow_climate_automation"
+  id: "grow_climate_enable_automation"
   description: "Enables all HVAC systems, preps the container for optimal growth climate"
   trigger:
     - platform: state
@@ -1717,50 +1769,44 @@
       from: "off"
       to: "on"
   action:
-    # Turn on or off intake fan and PIDs based on state
-    - choose:
-        - conditions:
-            - condition: state
-              entity_id: "input_boolean.hvac_operation"
-              state: "on"
-          sequence:
-            - service: input_number.set_value
-              target: 
-                entity_id: "input_number.new_intake_fan_voltage"
-              data: 
-                value: 8
+    - service: input_number.set_value
+      target: 
+        entity_id: "input_number.new_intake_fan_voltage"
+      data: 
+        value: 8
+    - service: input_boolean.turn_on
+      target:
+        entity_id: 
+          - input_boolean.co2_pid_enable_toggle
+          - input_boolean.heating_pid_enable_toggle
+          - input_boolean.cooling_pid_enable_toggle
+    - service: logbook.log
+      data:
+        name: "Grow Climate Enable"
+        message: "All PIDs and Fan Voltage set. HVAC operation started."
 
-            - service: input_boolean.turn_on
-              target:
-                entity_id: 
-                  - input_boolean.co2_pid_enable_toggle
-                  - input_boolean.heating_pid_enable_toggle
-                  - input_boolean.cooling_pid_enable_toggle
+- alias : "Disable grow climate"
+  id: "grow_climate_disable_automation"
+  description: "Disable all HVAC systems"
+  trigger:
+    - platform: state
+      entity_id: "input_boolean.hvac_operation"
+      from: "on"
+      to: "off"
+  action:
+    - service: input_number.set_value
+      target: 
+        entity_id: "input_number.new_intake_fan_voltage"
+      data: 
+        value: 0
+    - service: input_boolean.turn_off
+      target:
+        entity_id: 
+          - input_boolean.co2_pid_enable_toggle
+          - input_boolean.heating_pid_enable_toggle
+          - input_boolean.cooling_pid_enable_toggle
+    - service: logbook.log
+      data:
+        name: "Grow Climate disable"
+        message: "All PIDs and Fan Voltage turned off. HVAC operation halted."
 
-            - service: logbook.log
-              data:
-                name: "Grow Climate"
-                message: "All PIDs and Fan Voltage set. HVAC operation started."
-
-        - conditions:
-            - condition: state
-              entity_id: "input_boolean.hvac_operation"
-              state: "off"
-          sequence:
-            - service: input_number.set_value
-              target: 
-                entity_id: "input_number.new_intake_fan_voltage"
-              data: 
-                value: 0  # Set it back to 0 when HVAC is off
-
-            - service: input_boolean.turn_off
-              target:
-                entity_id: 
-                  - input_boolean.co2_pid_enable_toggle
-                  - input_boolean.heating_pid_enable_toggle
-                  - input_boolean.cooling_pid_enable_toggle
-
-            - service: logbook.log
-              data:
-                name: "Grow Climate"
-                message: "All PIDs and Fan Voltage turned off. HVAC operation stopped."
